--- a/Menu_Siglo21/Views/PlatosPage.xaml
+++ b/Menu_Siglo21/Views/PlatosPage.xaml
@@ -8,73 +8,75 @@
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
              Title="Platos">
     <ContentPage.Content>
-        <StackLayout BindingContext="{Binding Platos}">
+        <StackLayout BindingContext="{Binding Platos}" BackgroundColor="White">
             <!--Este es el atributo que esta dentro de main(nombre de la viewmodel)-->
             <Image Source="LOGORESTAURATSINFONDO.png" HeightRequest="70" BackgroundColor="White"/>
             <RefreshView IsRefreshing="{Binding IsRefreshing}"
                     Command="{Binding RefreshCommand}">
-                <CarouselView  ItemsSource="{Binding Platos}"  IndicatorView="indicatorView" BackgroundColor="WhiteSmoke" x:Name="PlatosSeleccion">
+                <CarouselView  ItemsSource="{Binding Platos}"  IndicatorView="indicatorView" BackgroundColor="White" x:Name="PlatosSeleccion">
                     <!--este binding tiene que ser un atributo dentro de products que sirve para pintar la lista de objs-->
                     <CarouselView.ItemTemplate>
                         <DataTemplate>
-                            <StackLayout Margin="5" BackgroundColor="WhiteSmoke">
+                            <StackLayout Margin="2" BackgroundColor="White">
                                 <Label FontAttributes="Bold" Text="{Binding Disponibilidad, Mode=TwoWay}" HorizontalOptions="Center" IsVisible="false">
                                 </Label>
                                 <Label FontAttributes="Bold"  HorizontalOptions="Center" Text="{Binding Origen, Mode=TwoWay}"  IsVisible="false">
                                 </Label>                                
-                                <Frame BorderColor="ForestGreen" CornerRadius="10" HasShadow="True" Margin="20" HeightRequest="500" HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
-                                    <StackLayout Margin="5" BackgroundColor="FloralWhite">
+                                <Frame BorderColor="DarkRed" CornerRadius="30" HasShadow="True" Margin="5" HeightRequest="800" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+                                    <StackLayout Margin="6" BackgroundColor="White" Orientation="Vertical">
                                         <Image Source="{Binding ImageUrl}" 
                                         Aspect="AspectFill"
-                                         HeightRequest="120"
-                                         WidthRequest="120"
-                                         HorizontalOptions="Center" Margin="30" >
+                                         HeightRequest="150"
+                                         WidthRequest="150"
+                                         HorizontalOptions="Center" Margin="10" >
                                         </Image>
                                         <Grid>
-                                            <Grid.RowDefinitions>
-                                                <RowDefinition Height="20"/>
+                                            <Grid.RowDefinitions>  
                                                 <RowDefinition Height="*"/>
-                                                <RowDefinition Height="*"/>
-                                                <RowDefinition Height="*"/>
+                                                <RowDefinition Height="50"/>                                                
+                                                <RowDefinition Height="50"/>
                                                 <RowDefinition Height="*"/>
                                                 <RowDefinition Height="*"/>
                                                 <RowDefinition Height="*"/>
                                             </Grid.RowDefinitions>
-                                            <Label Text="{Binding Nombre}" FontFamily="bebasNeue" FontAttributes="Bold" Grid.Row="0"
-                                          FontSize="Medium"
-                                          HorizontalOptions="CenterAndExpand"
-                                          VerticalOptions="CenterAndExpand">
+                                            <BoxView Grid.Row="0" BackgroundColor="WhiteSmoke"/>
+                                            <Label Text="{Binding Nombre}" FontFamily="GaladaRegular" FontAttributes="Bold" Grid.Row="0"
+                                                FontSize="Medium"
+                                                HorizontalOptions="CenterAndExpand"
+                                                VerticalOptions="CenterAndExpand" MaxLines="2">
                                             </Label>
+                                            <BoxView Grid.Row="1" BackgroundColor="White" />
                                             <Label Text="{Binding Descripcion}"
                                                 FontAttributes="Italic"
                                                 HorizontalOptions="CenterAndExpand"
                                                 VerticalOptions="CenterAndExpand"
                                                 MaxLines="3"
-                                                LineBreakMode="TailTruncation" Grid.Row="2">
+                                                LineBreakMode="TailTruncation" Grid.Row="1" FontFamily="CourierPrimeRegular">
                                             </Label>
-                                            <Label Text="Precio" FontAttributes="Bold" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" Grid.Row="3"/>
-                                            <Label FontAttributes="Bold" HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand" FontFamily="bebasNeue" Text="{Binding Precio, StringFormat='$ {0}'}" 
-                                                   Grid.Row="3"></Label>
-                                            <Label Text="Llevas: " HorizontalOptions="StartAndExpand" FontAttributes="Bold" Grid.Row="4"></Label>
-
-                                   
+                                            <BoxView Grid.Row="2" BackgroundColor="White"/>
+                                            <Label Text="Precio" FontFamily="CourierPrimeRegular" FontAttributes="Bold" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" Grid.Row="2"/>
+                                            <Label FontAttributes="Bold" HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand" FontFamily="CourierPrimeRegular" Text="{Binding Precio, StringFormat='$ {0}'}" 
+                                                   Grid.Row="2"></Label>
+                                            <BoxView Grid.Row="3" BackgroundColor="White" />
+                                            <Label Text="Llevas: " HorizontalOptions="StartAndExpand" FontFamily="CourierPrimeRegular" VerticalOptions="CenterAndExpand" FontAttributes="Bold" Grid.Row="3"></Label>                                    
                                             <Entry BindingContext="{x:Reference StepperCounterCant}" Text="{Binding Value}"  HorizontalTextAlignment="Center"
-                                                Grid.Row="4" IsEnabled="False" HorizontalOptions="EndAndExpand" />
+                                                Grid.Row="3" IsEnabled="False" HorizontalOptions="EndAndExpand" FontFamily="CourierPrimeRegular"/>
+                                            <BoxView Grid.Row="4" BackgroundColor="White" />
                                             <Stepper 
                                                 BindingContext="{Binding Source={x:Reference PlatosSeleccion}, Path=BindingContext}" 
                                                 x:Name="StepperCounterCant" Minimum="0" Maximum="25" Increment="1" 
-                                                HorizontalOptions="CenterAndExpand" Grid.Row="5" 
-                                                Value="{Binding TxtCantidadCount}"/>
+                                                HorizontalOptions="CenterAndExpand" Grid.Row="4" 
+                                                Value="{Binding TxtCantidadCount}" />
                                             <Label x:Name="platoID" Text="{Binding Id_receta}" IsVisible="false" />
-                                            
+                                            <BoxView Grid.Row="5" BackgroundColor="White" />
                                             <Button HorizontalOptions="CenterAndExpand"
                                                 VerticalOptions="CenterAndExpand" Text="Agregar a Tu Pedido"
-                                                TextColor="Black"
-                                                CornerRadius="13" BorderColor="ForestGreen" BorderWidth="2"
+                                                TextColor="Black" FontFamily="CourierPrimeRegular"
+                                                CornerRadius="20" BorderColor="Red" BorderWidth="3"
                                                 BackgroundColor="White" 
                                                 Command="{Binding Source={x:Reference PlatosSeleccion}, Path=BindingContext.AddElementCommand}"
                                                 CommandParameter="{Binding Source={x:Reference platoID}, Path=Text}"
-                                                Grid.Row="6"/>
+                                                Grid.Row="5"/>
                                             <!--<Stepper Value="{Binding Cantidad}" Minimum="0" Maximum="25" HorizontalOptions="Center"/>-->
                                             <!--Bindear el maximo del stock-->
                                         </Grid>
@@ -90,7 +92,7 @@
                        IndicatorColor="LightGray"
                        SelectedIndicatorColor="DarkGray"
                        HorizontalOptions="Center"
-                       Margin="0,0,0,40" />
+                       Margin="0,0,0,20" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
